# rust_back_testing

another_backend/: Cargo.toml
another_backend/src/: main.rs
another_backend/src/api/: task.rs
flash_backend/: Cargo.toml
flash_backend/src/: main.rs  structure.rs
testing/: Cargo.toml
testing/src/: main.rs
testing/src/todolist/: services.rs
