[package]
name = "another_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version =  "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
env_logger = "0.10"
log = "0.4.17"

